@@ -1,5 +1,12 @@
-#! /bin/sh
-: '@(#)vnmrj.sh 22.1 03/24/08 '
+#! /bin/bash
+# 
+#
+# Copyright (C) 2015  University of Oregon
+# 
+# You may distribute under the terms of either the GNU General Public
+# License or the Apache License, as specified in the LICENSE file.
+# 
+# For more information, see the LICENSE file.
 # 
 #
 
@@ -16,11 +23,11 @@
 #    theme can be default, ocean, aqua or emerald
 #
 
-if (test x$vnmrsystem = "x")
+if [ x$vnmrsystem = "x" ]
 then
    vnmrsystem=/vnmr
 fi
-if (test x$vnmruser = "x")
+if [ x$vnmruser = "x" ]
 then
    source $vnmrsystem/user_templates/.vnmrenvsh
 fi
@@ -31,16 +38,29 @@ squish=1.0
 #laf="metal"
 showmem="no"
 theme="ocean"
+cmd=""
+cmd_on="n"
+dargs=""
+splash=""
 
 for arg in $*; do
-    arg02=`echo $arg | cut -c1-2`
+    arg02=$(echo $arg | cut -c1-2)
     if [ "x$debug_on" = "xyy" ]; then
         debug_on="y"
         debugargs=$arg
+    elif [ "x$cmd_on" = "xy" ]; then
+        cmd=$arg
+        cmd_on="n"
+    elif [ "x$splash" = "xy" ]; then
+        splash=-splash:$arg
     elif test ${arg02} = "-D"; then
         dargs="$dargs $arg";
     elif test $arg = "-debug"; then
         debug_on="yy"
+    elif test $arg = "-exec"; then
+        cmd_on="y"
+    elif test $arg = "-splash"; then
+        splash="y"
     else
         itype=$arg
     fi;
@@ -49,40 +69,60 @@ if [ "x$debug_on" = "xyy" ]; then
     debug_on="y"
     debugargs="traceXML"
 fi
-#echo dargs=\"$dargs\"
-#echo debugargs=\"$debugargs\"
-#echo itype=\"$itype\"
+if [ "x$splash" = "xy" ]; then
+    splash=""
+fi
+# echo dargs=\"$dargs\"
+# echo debugargs=\"$debugargs\"
+# echo itype=\"$itype\"
 
 if [ $itype = "adm" -o $itype = "admin" ]
 then
-    admin=`$vnmrsystem/bin/fileowner $vnmrsystem/vnmrrev`
+    admin=$($vnmrsystem/bin/fileowner $vnmrsystem/vnmrrev)
     itype="adm"
-    if test $USER != $admin
+    if [ $USER != $admin ]
     then
-      echo "Switching to administrator $admin and starting vnmrj adm"
-      su - $admin -c "vnmrj adm"
-      exit
+       echo "Switching to administrator $admin and starting vnmrj adm"
+       su - $admin -c "vnmrj adm"
+       exit
     fi
     laf="metal"
 else
-    id=`id | sed -e 's/[^(]*[(]\([^)]*\)[)].*/\1/'`
-    if test $USER != $id
+    id=$(id | sed -e 's/[^(]*[(]\([^)]*\)[)].*/\1/')
+    # echo "USER: $USER"
+    # echo "id: $id"
+    if [ "$USER" != "$id" ]
     then
-      echo "Switching to user $id and starting vnmrj"
-      su - $id -c "vnmrj"
-      exit
+       echo "Switching to user $id and starting vnmrj"
+       su - $id -c "$vnmrsystem/bin/vnmrj"
+       exit
+    fi
+    if [[ -d $vnmrsystem/p11 ]] || [[ -f $vnmruser/persistence/singleSession ]]
+    then
+       session=$(ls $vnmruser/lock_*.primary >& /dev/null)
+       if [ $? -eq 0 ]
+       then
+          cvnmr=$(ps -ef | grep "/java/vnmrj.jar" | grep -v grep | awk '{print $1}')
+          if [ x$cvnmr = x$id ]
+          then
+             sel=$(java -jar $vnmrsystem/java/dialog.jar "An OpenVnmrJ session is already active")
+             exit
+          fi
+       fi
     fi
 fi
 
-if test x$LD_LIBRARY_PATH = "x"
+
+if [ x$LD_LIBRARY_PATH = "x" ]
 then
     LD_LIBRARY_PATH=$vnmrsystem/java:$vnmruser/psg:$vnmrsystem/lib
     export LD_LIBRARY_PATH
 fi
 
+
 # Set the name of the host where the Database is located.
 # Default to "localhost".
-if test x$PGHOST = "x"
+if [ x$PGHOST = "x" ]
 then
     dbhost="localhost"
 else
@@ -91,7 +131,7 @@ fi
 
 # Get the port number for the database if available, else set to default
 # If the env variable PGPOST is set, use that, else default to 5432
-if test x$PGPORT = "x"
+if [ x$PGPORT = "x" ]
 then
     dbport="5432"
 else
@@ -99,7 +139,7 @@ else
 fi
 
 # If the env variable PGNETWORK_SERVER is set, use its value, default to 'no'
-if test x$PGNETWORK_SERVER = "x"
+if [ x$PGNETWORK_SERVER = "x" ]
 then
     dbnet_server="no"
 else
@@ -112,56 +152,80 @@ then
     vjclasspath=$vjclasspath:$vnmrsystem/java/vjmol.jar:$vnmrsystem/java/jmol.jar
 fi
 
-if test x$VGLRUN = "x"
+if [ x$VGLRUN = "x" ]
 then
     vjshell=""
 else
     vjshell="$VGLRUN"
 fi
+# Set java memory usage
+if [ x$VJMEM = "x" ]
+then
+    vjmem=-mx1500m
+else
+    vjmem=-mx"$VJMEM"m
+fi
 
-ostype=`uname -s`
 sysdir=$vnmrsystem
 userdir=$vnmruser
-shtoolcmd="/bin/sh"
+shtoolcmd="/bin/bash"
 shtooloption="-c"
-javabin="java"
+javabin="$vnmrsystem/jre/bin/java"
+if [ ! -f $javabin ]
+then
+   javabin="java"
+fi
+modsArg=""
+vers=$($javabin -fullversion 2>&1 | awk 'BEGIN {FS="\""} {print $2}' | awk 'BEGIN {FS="."} {print $1}')
+if [[ $vers > 8 ]]
+then
+  modsArg="--add-modules ALL-SYSTEM"
+fi
 
 # Set the "MultiClickTime"
 if [ -e $HOME/.vxresource ]; then
-    xrdb -merge $HOME/.vxresource
+   xrdb -merge $HOME/.vxresource
 fi
 
 # Remember which X DISPLAY to use
 if [ -w $vnmruser ]; then
-    rm -f $vnmruser/.DISPLAY
-    echo $DISPLAY > $vnmruser/.DISPLAY
+   rm -f $vnmruser/.DISPLAY
+   echo $DISPLAY > $vnmruser/.DISPLAY
 fi
 
-if test x$debug_on = "xy"
+
+if [ x$debug_on = "xy" ]
 then
 
- $vjshell $javabin -mx512m \
-    -classpath $vjclasspath $dargs \
-    -Ddbhost=$dbhost -Ddbport=$dbport -Dsysdir=$sysdir -Duserdir=$userdir \
-    -Duser=$USER -Dfont="Dialog plain 14" -Dlookandfeel=$laf -Dtheme=$theme -DqueueArea=yes \
-    -Dsfudirwindows="$SFUDIR" -Dsfudirinterix="$SFUDIR_INTERIX" \
-    -Dshtoolcmd="$shtoolcmd" -Dshtooloption="$shtooloption" -Dvjerrfile=custom \
-    -Dbatchupdates=no -Dpersona=$itype -Dsavepanels=10 -DSQAllowNesting=false \
-    -Dsquish=$squish -DshowMem=$showmem -Ddebug="savedatasetup,$debugargs" -Ddbnet_server=$dbnet_server \
-    vnmr.ui.VNMRFrame &
+     $vjshell "$javabin" "$vjmem" \
+        -classpath $vjclasspath $dargs $modsArg $splash \
+        -Ddbhost=$dbhost -Ddbport=$dbport -Dsysdir=$sysdir -Duserdir=$userdir \
+        -Duser=$USER -Dfont="Dialog plain 14" -Dlookandfeel=$laf -Dtheme=$theme -DqueueArea=yes \
+        -Dcmd="$cmd" \
+        -Dsfudirwindows="$SFUDIR" -Dsfudirinterix="$SFUDIR_INTERIX" \
+        -Dshtoolcmd="$shtoolcmd" -Dshtooloption="$shtooloption" -Dvjerrfile=custom \
+        -Dbatchupdates=no -Dpersona=$itype -Dsavepanels=10 -DSQAllowNesting=false \
+        -Djava.library.path="/vnmr/lib" \
+        -Djogamp.gluegen.UseTempJarCache="false" \
+        -Dsquish=$squish -DshowMem=$showmem -Ddebug="savedatasetup,$debugargs" -Ddbnet_server=$dbnet_server \
+        vnmr.ui.VNMRFrame
 
 else
 
-  $vjshell  $javabin -mx512m \
-    -classpath $vjclasspath $dargs \
-    -Xdock:icon=/vnmr/iconlib/Splash_VnmrJ.png \
-    -Xdock:name=OpenVnmrJ \
-    -Ddbhost=$dbhost -Ddbport=$dbport -Dsysdir=$sysdir -Duserdir=$userdir \
-    -Duser=$USER -Dfont="Dialog plain 14" -Dlookandfeel=$laf -Dtheme=$theme -DqueueArea=yes \
-    -Dsfudirwindows="$SFUDIR" -Dsfudirinterix="$SFUDIR_INTERIX" \
-    -Dshtoolcmd="$shtoolcmd" -Dshtooloption="$shtooloption" -Dvjerrfile=custom \
-    -Dbatchupdates=no -Dpersona=$itype -Dsavepanels=10 -DSQAllowNesting=false \
-    -Dsquish=$squish -Ddbnet_server=$dbnet_server -Ddebug="savedatasetup"\
-    vnmr.ui.VNMRFrame >>/dev/null &
-
+        $vjshell  "$javabin" "$vjmem" \
+          -classpath $vjclasspath $dargs $modsArg $splash \
+          -Xdock:icon=/vnmr/iconlib/Splash_VnmrJ.png \
+          -Xdock:name=OpenVnmrJ \
+          -Ddbhost=$dbhost -Ddbport=$dbport -Dsysdir=$sysdir -Duserdir=$userdir \
+          -Duser=$USER -Dfont="Dialog plain 14" -Dlookandfeel=$laf -Dtheme=$theme -DqueueArea=yes \
+          -DcanvasFont="Dialog plain 12" \
+          -Dcmd="$cmd" \
+          -Dsfudirwindows="$SFUDIR" -Dsfudirinterix="$SFUDIR_INTERIX" \
+          -Dshtoolcmd="$shtoolcmd" -Dshtooloption="$shtooloption" -Dvjerrfile=custom \
+          -Dbatchupdates=no -Dpersona=$itype -Dsavepanels=10 -DSQAllowNesting=false \
+          -Dsquish=$squish -Ddbnet_server=$dbnet_server -Ddebug="savedatasetup" \
+          -Djava.library.path="/vnmr/lib" \
+          -Djogamp.gluegen.UseTempJarCache="false" \
+           vnmr.ui.VNMRFrame >& /dev/null &
 fi
+
